Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32956

No lastWindowClosed signal emitted unless quitOnLastWindowClosed is set

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • None
    • 5.1.0
    • GUI: Window management
    • None
    • 32422885fcd10af567b25bdca521fe9e3e68f36f

    Description

      QWindowPrivate::maybeQuitOnLastWindowClosed() checks the quitOnLastWindowClosed flag, and will not emit if the flag is false.

      Documentation says, "This signal is emitted from exec() when the last visible primary window (i.e. window with no parent) is closed."

      Attachments

        For Gerrit Dashboard: QTBUG-32956
        # Subject Branch Project Status CR V

        Activity

          People

            srutledg Shawn Rutledge
            mikkohar Mikko Harju
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes